app/styles/main.scss
// Application variables and overrides
@import "variables";

// Library imports
@import "bootstrap-sass/lib/bootstrap";

// Application imports
@import "common";
@import "mixins";
@import "responsive";
@import "cards-common";
@import "bootstrap-overrides";
@import "select2-overrides";
@import "fonts";
@import "icons";
@import "directives";
@import "filter-bar";

body, html {
  width: 100%;
  height: 100%;
}

body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  font-weight: 200;
}

a:focus {
  outline: 0 !important;
}

// The spinners look like crap
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.app-outer-layout {
  width: 100%;
  height: 100%;
  display: flex;
  flex-grow: 1;
}

.app-inner-layout {
  width: 100%;
  width: calc(100% - #{$sidebar-width}); // This is so Safari doesn't give too much space to the inner layout
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.page {
  @extend .scrollable;
  @extend .scrollable.always-scrollable;

  flex-grow: 1;
  overflow-x: hidden;
  position: relative;
}

footer {
  position: absolute;
  font-size: 11px;
  left: 3px;
  bottom: 0;
  padding: 2px 5px;
  background: rgba(255, 255, 255, 0.9);

  > a {
    &, &:hover, &:visited {
      color: #777;
      text-decoration: none;
    }
  }

  .about {
    display: inline;
    outline: 0;
    cursor: pointer;
    color: #777;

    &:focus {
      .tooltip {
        opacity: 1;
      }
    }

    .tooltip {
      top: -76px;
      width: 130px;

      .tooltip-inner {
        max-width: initial;
        text-align: left;
      }

      .tooltip-arrow {
        left: 11%;
      }
    }
  }
}

